Edits and Updates cat's information

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                         <tr>
                             <td><%= cats[i].name %></td>
                             <td><%= cats[i].age %></td>
-                            <td><a href="" class="btn btn-primary">Edit</a></td>
+                            <td><a href="/cats/edit/<%= cats[i]._id %>" class="btn btn-primary">Edit</a></td>
                             <td><a href="" class="btn btn-danger">Delete</a></td>
                         </tr>
                     <% } %>
