--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,7 @@
                     <% } %>
                 </tbody>
             </table>
+            <a href="/cats/create" class="btn btn-primary">Create Another</a>
         </div>
     </body>
 </html>
