--- a/views/create.ejs
+++ b/views/create.ejs
@@ -17,7 +17,7 @@
                     <label for="item">Cat Age</label>
                     <input type="text" class="form-control" id="age" name="age">
                 </div>
-                <button type="submit" class="btn btn-default">Submit Cat</button>
+                <button type="submit" class="btn btn-default btn-primary">Submit Cat</button>
             </form>
         </div>
     </body>
