API creates new cat given params in body

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -8,7 +8,7 @@
     <body>
         <div class="containter">
             <h1>Add Cat</h1>
-            <form method="post" action="/cats/post">
+            <form method="post" action="/cats">
                 <div class="form-group">
                     <label for="item>">Cat Name</label>
                     <input type="text" class="form-control" id="name" name="name">
